[package]
name = "blockchain-cli"
description = "A Rust crate provides an interface for interacting with a blockchain."
version = "1.0.26"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Slavik Pastushenko <slavpas@gmail.com>"]
keywords = ["cli", "crypto", "blockchain"]
exclude = [".github/**", "examples/**"]
categories = ["command-line-utilities", "cryptography"]
documentation = "https://docs.rs/blockchain-cli"
repository = "https://github.com/slavik-pastushenko/blockchain-rs"

[lib]
name = "blockchain"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.39"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
twox-hash = "2.1.0"
