[package]
name = "blockchain-cli"
description = "An interface for interacting with a blockchain."
version = "1.1.2"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Slavik Pastushenko <slavpas@gmail.com>"]
keywords = ["cli", "crypto", "blockchain"]
exclude = [".github/**", "examples/**"]
categories = ["command-line-utilities", "cryptography"]
documentation = "https://docs.rs/blockchain-cli"
repository = "https://github.com/slavik-pastushenko/blockchain-rs"

[lib]
name = "blockchain"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.39"
derive_builder = "0.20.2"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
thiserror = "2.0.11"
twox-hash = "2.1.0"
uuid = { version = "1.12.0", features = ["serde", "v4"] }

[dev-dependencies]
cliclack = "0.1.9"
axum = "0.6.20"
tokio = { version = "1.43.1", features = ["full"] }

[[example]]
name = "cli"
path = "examples/cli/src/main.rs"

[[example]]
name = "api"
path = "examples/api/src/main.rs"
